Fixed extra margin space above work images
The method used to remove the clickable margins of the work images
caused extra space to appear above the first ones in each article.

To avoid this problem, instead of applying the top and bottom margins to
the imgs, they are applied to the containing divs (class img-block).

--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,5 @@
+article > img { margin: 25px auto; }
+
 @media (min-width: 500px) {
     article > img {
         float: left;
