--- a/css/work.css
+++ b/css/work.css
@@ -7,7 +7,10 @@ th {
 
 td { padding-left: 5px; }
 
-.img-block { text-align: center; }              /* Horizontally center images */
+.img-block {
+    text-align: center;                         /* Horizontally center images */
+    margin: 25px 0;
+}
 
 a > img { max-width: 100%; height: auto; }      /* Responsive images */
 
